illegible button fixes #222

--- a/app/assets/stylesheets/common.styl
+++ b/app/assets/stylesheets/common.styl
@@ -183,6 +183,13 @@ $button
 div.home-page 
   .page-content
     background-color: transparent
+  h1
+    background-color: transparent
+  p
+    background-color: transparent
+  div
+    background-color: transparent
+
 
   -webkit-touch-callout none
   -webkit-user-select none
